--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -6,7 +6,7 @@
 #    By: eguelin <eguelin@student.42lyon.fr>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/09/30 15:03:56 by eguelin           #+#    #+#              #
-#    Updated: 2023/11/23 18:37:58 by eguelin          ###   ########lyon.fr    #
+#    Updated: 2023/11/24 17:29:10 by eguelin          ###   ########lyon.fr    #
 #                                                                              #
 # **************************************************************************** #
 
@@ -50,9 +50,9 @@ FULL_CLEAN_MSG	= "$(PURPLE)Full cleaning $(NAME) $(RESET)done on $(YELLOW)$(shel
 #                                    Sources                                   #
 # **************************************************************************** #
 
-ALL_FILES		= main.cpp
+ALL_FILES	= main.cpp
 
-OBJS			+= $(addprefix $(OUT_DIR), $(ALL_FILES:.cpp=.o))
+OBJ_FILES	= $(addprefix $(OUT_DIR), $(ALL_FILES:.cpp=.o) $(CLS_FILES:.cpp=.o))
 
 # **************************************************************************** #
 #                                     Rules                                    #
@@ -60,11 +60,14 @@ OBJS			+= $(addprefix $(OUT_DIR), $(ALL_FILES:.cpp=.o))
 
 all: $(NAME)
 
-$(NAME): $(OBJS)
-	$(CC) $(CFLAGS) $(OBJS) -o $(NAME)
+$(NAME): $(OBJ_FILES)
+	$(CC) $(CFLAGS) $(OBJ_FILES) -o $(NAME)
 	echo $(COMP_MSG)
 
-$(OUT_DIR)%.o : $(SRC_DIR)%.cpp $(HEADERS) | $(OUT_DIR)
+$(OUT_DIR)%.o: $(SRC_DIR)%.cpp | $(OUT_DIR)
+	$(CC) $(CFLAGS) -c $< -o $@
+
+$(OUT_DIR)%.o: $(CLS_DIR)%.cpp | $(OUT_DIR)
 	$(CC) $(CFLAGS) -c $< -o $@
 
 clean:
