--- a/ex04/Makefile
+++ b/ex04/Makefile
@@ -6,7 +6,7 @@
 #    By: eguelin <eguelin@student.42lyon.fr>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/09/30 15:03:56 by eguelin           #+#    #+#              #
-#    Updated: 2023/11/23 18:37:58 by eguelin          ###   ########lyon.fr    #
+#    Updated: 2023/11/24 17:07:56 by eguelin          ###   ########lyon.fr    #
 #                                                                              #
 # **************************************************************************** #
 
@@ -52,13 +52,13 @@ FULL_CLEAN_MSG	= "$(PURPLE)Full cleaning $(NAME) $(RESET)done on $(YELLOW)$(shel
 #                                    Sources                                   #
 # **************************************************************************** #
 
-INC_FILES		= ft_utils.hpp
+INC_FILES	= ft_utils.hpp
 
-HEADERS			= $(addprefix $(INC_DIR), $(INC_FILES))
+ALL_FILES	= main.cpp ft_utils.cpp
 
-ALL_FILES		= main.cpp ft_utils.cpp
+OBJ_FILES	= $(addprefix $(OUT_DIR), $(ALL_FILES:.cpp=.o) $(CLS_FILES:.cpp=.o))
 
-OBJS			+= $(addprefix $(OUT_DIR), $(ALL_FILES:.cpp=.o))
+DEP_FILES	= $(OBJ_FILES:.o=.d)
 
 # **************************************************************************** #
 #                                     Rules                                    #
@@ -66,12 +66,15 @@ OBJS			+= $(addprefix $(OUT_DIR), $(ALL_FILES:.cpp=.o))
 
 all: $(NAME)
 
-$(NAME): $(OBJS)
-	$(CC) $(CFLAGS) $(INC) $(OBJS) -o $(NAME)
+$(NAME): $(OBJ_FILES)
+	$(CC) $(CFLAGS) $(INC) $(OBJ_FILES) -o $(NAME)
 	echo $(COMP_MSG)
 
-$(OUT_DIR)%.o : $(SRC_DIR)%.cpp $(HEADERS) | $(OUT_DIR)
-	$(CC) $(CFLAGS) $(INC) -c $< -o $@
+$(OUT_DIR)%.o: $(SRC_DIR)%.cpp | $(OUT_DIR)
+	$(CC) $(CFLAGS) $(INC) -MMD -c $< -o $@
+
+$(OUT_DIR)%.o: $(CLS_DIR)%.cpp | $(OUT_DIR)
+	$(CC) $(CFLAGS) $(INC) -MMD -c $< -o $@
 
 clean:
 	$(RM) $(OUT_DIR)
@@ -85,3 +88,5 @@ re: fclean all
 
 $(OUT_DIR):
 	mkdir -p $(OUT_DIR)
+
+-include $(DEP_FILES)
