--- a/ex04/Makefile
+++ b/ex04/Makefile
@@ -6,7 +6,7 @@
 #    By: eguelin <eguelin@student.42lyon.fr>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/09/30 15:03:56 by eguelin           #+#    #+#              #
-#    Updated: 2023/11/24 17:07:56 by eguelin          ###   ########lyon.fr    #
+#    Updated: 2023/11/26 17:27:05 by eguelin          ###   ########lyon.fr    #
 #                                                                              #
 # **************************************************************************** #
 
@@ -52,11 +52,10 @@ FULL_CLEAN_MSG	= "$(PURPLE)Full cleaning $(NAME) $(RESET)done on $(YELLOW)$(shel
 #                                    Sources                                   #
 # **************************************************************************** #
 
-INC_FILES	= ft_utils.hpp
+ALL_FILES	= main.cpp \
+			  ft_utils.cpp
 
-ALL_FILES	= main.cpp ft_utils.cpp
-
-OBJ_FILES	= $(addprefix $(OUT_DIR), $(ALL_FILES:.cpp=.o) $(CLS_FILES:.cpp=.o))
+OBJ_FILES	= $(addprefix $(OUT_DIR), $(ALL_FILES:.cpp=.o))
 
 DEP_FILES	= $(OBJ_FILES:.o=.d)
 
@@ -71,9 +70,6 @@ $(NAME): $(OBJ_FILES)
 	echo $(COMP_MSG)
 
 $(OUT_DIR)%.o: $(SRC_DIR)%.cpp | $(OUT_DIR)
-	$(CC) $(CFLAGS) $(INC) -MMD -c $< -o $@
-
-$(OUT_DIR)%.o: $(CLS_DIR)%.cpp | $(OUT_DIR)
 	$(CC) $(CFLAGS) $(INC) -MMD -c $< -o $@
 
 clean:
