--- a/ex06/Makefile
+++ b/ex06/Makefile
@@ -6,7 +6,7 @@
 #    By: eguelin <eguelin@student.42lyon.fr>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/09/30 15:03:56 by eguelin           #+#    #+#              #
-#    Updated: 2023/11/24 17:11:04 by eguelin          ###   ########lyon.fr    #
+#    Updated: 2023/11/26 17:38:19 by eguelin          ###   ########lyon.fr    #
 #                                                                              #
 # **************************************************************************** #
 
@@ -52,13 +52,15 @@ FULL_CLEAN_MSG	= "$(PURPLE)Full cleaning $(NAME) $(RESET)done on $(YELLOW)$(shel
 #                                    Sources                                   #
 # **************************************************************************** #
 
-INC_CLS		= Harl.hpp
-
-ALL_FILES	= main.cpp
-
 CLS_FILES	= Harl.cpp
 
-OBJ_FILES	= $(addprefix $(OUT_DIR), $(ALL_FILES:.cpp=.o) $(CLS_FILES:.cpp=.o))
+ALL_FILES	= $(addprefix $(CLS_DIR), $(CLS_FILES))
+
+SRC_FILES	= main.cpp
+
+ALL_FILES	+= $(addprefix $(SRC_DIR), $(SRC_FILES))
+
+OBJ_FILES	= $(addprefix $(OUT_DIR), $(ALL_FILES:.cpp=.o))
 
 DEP_FILES	= $(OBJ_FILES:.o=.d)
 
@@ -72,10 +74,7 @@ $(NAME): $(OBJ_FILES)
 	$(CC) $(CFLAGS) $(INC) $(OBJ_FILES) -o $(NAME)
 	echo $(COMP_MSG)
 
-$(OUT_DIR)%.o: $(SRC_DIR)%.cpp | $(OUT_DIR)
-	$(CC) $(CFLAGS) $(INC) -MMD -c $< -o $@
-
-$(OUT_DIR)%.o: $(CLS_DIR)%.cpp | $(OUT_DIR)
+$(OUT_DIR)%.o: %.cpp | $(OUT_DIR)
 	$(CC) $(CFLAGS) $(INC) -MMD -c $< -o $@
 
 clean:
@@ -89,6 +88,6 @@ fclean: clean
 re: fclean all
 
 $(OUT_DIR):
-	mkdir -p $(OUT_DIR)
+	mkdir -p $(OUT_DIR)$(CLS_DIR) $(OUT_DIR)$(SRC_DIR)
 
 -include $(DEP_FILES)
